--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<style type="text/css">
-  /*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*/
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     .sidebar{
   margin: 0;
@@ -89,6 +89,10 @@ display: inline;
   }
 }
 
+.title {
+  font-family: serif;color : red; font-size:24px; font-weight:bold;
+}
+
 	</style>
 </head>
 <body>
@@ -158,7 +162,8 @@ I'm a good programmer with great habits."</font>
 
 </div>
 <br>
-<font style= "font-family: serif;color : red; font-size:24px; font-weight:bold;">EXPERIENCE</font>
+<!--Experiece Title -->
+<span class = "title">EXPERIENCE</span>
 <br>
 <br>
 <br>
@@ -175,7 +180,7 @@ I'm a good programmer with great habits."</font>
 <br>
 <hr>
 <br>
-<font style= "font-family: serif; font-size:24px; color : red;display : inline; font-weight:bold;">EDUCATION</font>
+<span class = "title">EDUCATION</span>
 <br>
 <br>
 <br>
@@ -205,7 +210,8 @@ I'm a good programmer with great habits."</font>
 <br>
 <hr>
 <br>
-<font style= "font-family: serif;color : red;display : inline; font-size:24px;   font-weight:bold;">SKILLS</font>
+<!--Skills Title -->
+<span class = "title">SKILLS</span>
 <br>
 <br>
 <br>
